--- a/sys/pic32/max32/Makefile
+++ b/sys/pic32/max32/Makefile
@@ -1,4 +1,4 @@
-PARAM = -DCHIPKIT_MAX
+PARAM = -DCHIPKIT_MAX32
 PARAM += -DPIC32MX7
 PARAM += -DPWM_ENABLED
 PARAM += -DADC_ENABLED
@@ -15,17 +15,10 @@ PARAM += -DUART2_ENABLED
 PARAM += -DUART1_ENABLED
 PARAM += -DLED_KERNEL_PIN=3
 PARAM += -DLED_KERNEL_PORT=TRISA
-PARAM += -DUCB_METER
-PARAM += -DEXEC_SCRIPT
-PARAM += -DEXEC_ELF
-PARAM += -DEXEC_AOUT
 PARAM += -DBUS_DIV=1
-PARAM += -DHZ=100
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
-PARAM += -DTIMEZONE=480
-PARAM += -DDST=1
-PARAM += -DMAXUSERS=1
+PARAM += -DHZ=100
 LDSCRIPT = "cfg/bootloader-max32.ld"
 #
 # Makefile for RetroBSD, pic32 target
