--- a/sys/pic32/max32/Config
+++ b/sys/pic32/max32/Config
@@ -11,15 +11,12 @@
 # For details, see http://retrobsd.org/wiki/doku.php/doc/kconfig
 #
 architecture    "pic32"
-
-cpu             "PIC32MX7"
-board           "CHIPKIT_MAX32"
-
-# Linker script
-ldscript        "cfg/bootloader-max32.ld"
+cpu             "PIC32MX7"                  # Processor variant
+board           "CHIPKIT_MAX32"             # Board type
+hz              100                         # Rate of clock interrupt
+ldscript        "cfg/bootloader-max32.ld"   # Linker script
 
 # Standard system options
-hz              100                         # Rate of clock interrupt
 options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
