--- a/sys/pic32/duinomite-emega/Makefile
+++ b/sys/pic32/duinomite-emega/Makefile
@@ -4,21 +4,21 @@ PARAM += -DPWM_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DGPIO_ENABLED
 PARAM += -DSD0_ENA_PIN=13
-PARAM += -DSD0_ENA_PORT=TRISB
-PARAM += -DSD0_CS_PIN=5
-PARAM += -DSD0_CS_PORT=TRISD
+PARAM += -DSD0_ENA_PORT=TRISG
+PARAM += -DSD0_CS_PIN=12
+PARAM += -DSD0_CS_PORT=TRISG
 PARAM += -DSD0_PORT=3
 PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_DISK_PIN=12
-PARAM += -DLED_DISK_PORT=TRISB
+PARAM += -DLED_DISK_PIN=1
+PARAM += -DLED_DISK_PORT=TRISC
 PARAM += -DLED_KERNEL_PIN=15
 PARAM += -DLED_KERNEL_PORT=TRISB
 PARAM += -DBUS_DIV=1
-PARAM += -DBUS_KHZ=80000
+PARAM += -DBUS_KHZ=40000
 PARAM += -DCPU_KHZ=80000
 PARAM += -DHZ=100
 LDSCRIPT = "cfg/bootloader-maximite.ld"
