New kernel configurations for UBW32 board.

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -14,9 +14,12 @@ install:
 
 clean:
 		-for i in $(SUBDIR); do ${MAKE} -C $$i clean; done
-		find .. -name \*~ | xargs rm -f
 
 reconfig:
+		-for i in $(SUBDIR); do ${MAKE} -C $$i reconfig; done
+
+configsys:
 		-for i in $(SUBDIR); do echo $$i; \
                 I=`echo $$i | awk '{print toupper($$0)}'`; \
-                (cd $$i; ../../../tools/configsys/config $$I); done
+                if [ ! -f $$i/Config ]; then \
+                (cd $$i; ../../../tools/configsys/config $$I); fi; done
