--- a/sys/pic32/Makefile.kconf
+++ b/sys/pic32/Makefile.kconf
@@ -56,10 +56,10 @@ SYSTEM_LD_TAIL  = ${SIZE} unix.elf; \
 %LOAD
 
 clean:
-	rm -rf .deps *.elf *.o *.map *.dis *.bin
+	rm -rf .deps *.elf *.o *.map *.dis *.bin machine sys
 
 clean-all: clean
-	rm -f *.h *.c machine sys
+	rm -f *.h ioconf.c swapunix.c vers.c
 
 reconfig ioconf.c swapunix.c: Config ../../../tools/kconfig/kconfig
 	../../../tools/kconfig/kconfig Config
