--- a/sys/pic32/ubw32/Makefile
+++ b/sys/pic32/ubw32/Makefile
@@ -1,27 +1,36 @@
-PARAM = -DDUINOMITE
+PARAM = -DUBW32
 PARAM += -DPIC32MX7
 PARAM += -DPWM_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DGPIO_ENABLED
-PARAM += -DSD0_ENA_PIN=13
-PARAM += -DSD0_ENA_PORT=TRISB
-PARAM += -DSD0_CS_PIN=5
-PARAM += -DSD0_CS_PORT=TRISD
-PARAM += -DSD0_PORT=3
+PARAM += -DSD1_CS_PIN=10
+PARAM += -DSD1_CS_PORT=TRISA
+PARAM += -DSD1_PORT=1
+PARAM += -DSD0_CS_PIN=9
+PARAM += -DSD0_CS_PORT=TRISA
+PARAM += -DSD0_PORT=1
 PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_DISK_PIN=12
-PARAM += -DLED_DISK_PORT=TRISB
-PARAM += -DLED_KERNEL_PIN=15
-PARAM += -DLED_KERNEL_PORT=TRISB
+PARAM += -DLED_TTY_INVERT
+PARAM += -DLED_TTY_PIN=3
+PARAM += -DLED_TTY_PORT=TRISE
+PARAM += -DLED_SWAP_INVERT
+PARAM += -DLED_SWAP_PIN=0
+PARAM += -DLED_SWAP_PORT=TRISE
+PARAM += -DLED_DISK_INVERT
+PARAM += -DLED_DISK_PIN=1
+PARAM += -DLED_DISK_PORT=TRISE
+PARAM += -DLED_KERNEL_INVERT
+PARAM += -DLED_KERNEL_PIN=2
+PARAM += -DLED_KERNEL_PORT=TRISE
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
 PARAM += -DHZ=100
-LDSCRIPT = "cfg/bootloader-maximite.ld"
+LDSCRIPT = "cfg/bootloader-ubw32.ld"
 #
 # Makefile for RetroBSD, pic32 target
 #
