Generic config file updated.

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -15,6 +15,9 @@ install:
 clean:
 		-for i in $(SUBDIR); do ${MAKE} -C $$i clean; done
 
+clean-all:
+		-for i in $(SUBDIR); do ${MAKE} -C $$i clean-all; done
+
 reconfig:
 		-for i in $(SUBDIR); do ${MAKE} -C $$i reconfig; done
 
