Simplify board names for max32 and wf32.

--- a/sys/pic32/max32/Config
+++ b/sys/pic32/max32/Config
@@ -14,7 +14,7 @@
 #
 architecture    "pic32"
 cpu             "PIC32MX7"                  # Processor variant
-board           "CHIPKIT_MAX32"             # Board type
+board           "MAX32"                     # Board type
 ldscript        "cfg/bootloader-max32.ld"   # Linker script
 
 # Standard system options
