--- a/sys/pic32/wf32/Config
+++ b/sys/pic32/wf32/Config
@@ -12,7 +12,7 @@
 #
 architecture    "pic32"
 cpu             "PIC32MX7"                  # Processor variant
-board           "CHIPKIT_WF32"              # Board type
+board           "WF32"                      # Board type
 ldscript        "cfg/bootloader-max32.ld"   # Linker script
 
 # Standard system options
