New kernel configuration for Explorer16 board.

--- a/sys/pic32/32mxsdram/Config
+++ b/sys/pic32/32mxsdram/Config
@@ -31,7 +31,7 @@ options         "LED_DISK_PORT=TRISC"       # for disk activity LED...
 options         "LED_DISK_PIN=13"           # ...use pin RC13
 options         "LED_SWAP_PORT=TRISC"       # for swap activity LED...
 options         "LED_SWAP_PIN=14"           # ...use pin RC14
-options         "LED_TTY_PORT=TRISA"        # for sserial activity LED...
+options         "LED_TTY_PORT=TRISA"        # for serial activity LED...
 options         "LED_TTY_PIN=14"            # ...use pin RA14
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
