--- a/sys/pic32/baremetal/Config
+++ b/sys/pic32/baremetal/Config
@@ -27,7 +27,7 @@ options         "LED_KERNEL_PORT=TRISD"     # for kernel activity LED...
 options         "LED_KERNEL_PIN=3"          # ...use pin RD3
 options         "LED_DISK_PORT=TRISD"       # for disk activity LED...
 options         "LED_DISK_PIN=2"            # ...use pin RD2
-options         "LED_TTY_PORT=TRISD"        # for sserial activity LED...
+options         "LED_TTY_PORT=TRISD"        # for serial activity LED...
 options         "LED_TTY_PIN=12"            # ...use pin RD12
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
