Kconfig: generate xxx_ENABLED defines automatically.

--- a/sys/pic32/32mxsdram/Makefile
+++ b/sys/pic32/32mxsdram/Makefile
@@ -1,21 +1,22 @@
 PARAM = -DCUSTOM_32MXSDRAM
 PARAM += -DPIC32MX7
+PARAM += -DUART3_ENABLED
+PARAM += -DSPI4_ENABLED
+PARAM += -DSD_ENABLED
+PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
+PARAM += -DSDRAMP_ENABLED
 PARAM += -DNMOUNT=3
 PARAM += -DPARTITION='sdramp0:sa@2048,fs@14000'
 PARAM += -DKERNEL_EXECUTABLE_RAM
-PARAM += -DSDRAMP_ENABLED
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
-PARAM += -DGPIO_ENABLED
 PARAM += -DSD0_ENA_PIN=13
 PARAM += -DSD0_ENA_PORT=TRISB
 PARAM += -DSD0_CS_PIN=3
 PARAM += -DSD0_CS_PORT=TRISF
 PARAM += -DSD0_PORT=4
 PARAM += -DSD0_MHZ=10
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty2
-PARAM += -DUART3_ENABLED
 PARAM += -DLED_TTY_PIN=14
 PARAM += -DLED_TTY_PORT=TRISA
 PARAM += -DLED_SWAP_PIN=14
