--- a/sys/pic32/baremetal/Makefile
+++ b/sys/pic32/baremetal/Makefile
@@ -1,15 +1,16 @@
 PARAM = -DBAREMETAL
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUART1_ENABLED
+PARAM += -DSPI2_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISD
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=16
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DUART1_ENABLED
 PARAM += -DLED_TTY_PIN=12
 PARAM += -DLED_TTY_PORT=TRISD
 PARAM += -DLED_DISK_PIN=2
