--- a/sys/pic32/duinomite-emega/Makefile
+++ b/sys/pic32/duinomite-emega/Makefile
@@ -1,17 +1,18 @@
 PARAM = -DDUINOMITE
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DSPI3_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_ENA_PIN=13
 PARAM += -DSD0_ENA_PORT=TRISG
 PARAM += -DSD0_CS_PIN=12
 PARAM += -DSD0_CS_PORT=TRISG
 PARAM += -DSD0_PORT=3
-PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_DISK_PIN=1
 PARAM += -DLED_DISK_PORT=TRISC
