--- a/sys/pic32/fubarino/Makefile
+++ b/sys/pic32/fubarino/Makefile
@@ -1,16 +1,17 @@
 PARAM = -DFUBARINO
 PARAM += -DPIC32MX7
-PARAM += -DGLCD_ENABLED
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DSPI2_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
+PARAM += -DGLCD_ENABLED
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISG
 PARAM += -DSD0_PORT=2
-PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_KERNEL_PIN=5
 PARAM += -DLED_KERNEL_PORT=TRISE
