--- a/sys/pic32/max32/Makefile
+++ b/sys/pic32/max32/Makefile
@@ -1,18 +1,19 @@
 PARAM = -DMAX32
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUART1_ENABLED
+PARAM += -DUART2_ENABLED
+PARAM += -DUART3_ENABLED
+PARAM += -DUART4_ENABLED
+PARAM += -DSPI2_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=14
 PARAM += -DSD0_CS_PORT=TRISC
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DUART4_ENABLED
-PARAM += -DUART3_ENABLED
-PARAM += -DUART2_ENABLED
-PARAM += -DUART1_ENABLED
 PARAM += -DLED_KERNEL_PIN=3
 PARAM += -DLED_KERNEL_PORT=TRISA
 PARAM += -DBUS_DIV=1
