--- a/sys/pic32/maximite/Makefile
+++ b/sys/pic32/maximite/Makefile
@@ -1,15 +1,16 @@
 PARAM = -DMAXIMITE
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DSPI4_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=0
 PARAM += -DSD0_CS_PORT=TRISE
 PARAM += -DSD0_PORT=4
-PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_DISK_PIN=1
 PARAM += -DLED_DISK_PORT=TRISE
