--- a/sys/pic32/picadillo/Makefile
+++ b/sys/pic32/picadillo/Makefile
@@ -1,16 +1,17 @@
 PARAM = -DPICADILLO_35T
 PARAM += -DPIC32MX7
-PARAM += -DHX8357_ENABLED
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUART1_ENABLED
+PARAM += -DSPI2_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
+PARAM += -DHXTFT_ENABLED
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISG
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DUART1_ENABLED
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
