--- a/sys/pic32/ubw32/Makefile
+++ b/sys/pic32/ubw32/Makefile
@@ -1,18 +1,20 @@
 PARAM = -DUBW32
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DSPI1_ENABLED
+PARAM += -DSD_ENABLED
+PARAM += -DSD1_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD1_CS_PIN=10
 PARAM += -DSD1_CS_PORT=TRISA
 PARAM += -DSD1_PORT=1
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISA
 PARAM += -DSD0_PORT=1
-PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_TTY_INVERT
 PARAM += -DLED_TTY_PIN=3
