--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -1,15 +1,16 @@
 PARAM = -DEXPLORER16
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUART2_ENABLED
+PARAM += -DSPI1_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISB
 PARAM += -DSD0_PORT=1
 PARAM += -DSD0_MHZ=10
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty1
-PARAM += -DUART2_ENABLED
 PARAM += -DLED_SWAP_PIN=3
 PARAM += -DLED_SWAP_PORT=TRISA
 PARAM += -DLED_TTY_PIN=2
