--- a/sys/pic32/mmb-mx7/Makefile
+++ b/sys/pic32/mmb-mx7/Makefile
@@ -1,19 +1,20 @@
 PARAM = -DMMB_MX7
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DUART1_ENABLED
+PARAM += -DSPI1_ENABLED
+PARAM += -DSD_ENABLED
+PARAM += -DGPIO_ENABLED
 PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DGPIO_CLEAR_PIN=2
 PARAM += -DGPIO_CLEAR_PORT=TRISD
-PARAM += -DGPIO_ENABLED
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISA
 PARAM += -DSD0_MHZ=8
 PARAM += -DSD0_PORT=1
-PARAM += -DSPI_ENABLED
-PARAM += -DUART1_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_TTY_INVERT
 PARAM += -DLED_TTY_PIN=1
