--- a/sys/pic32/starter-kit/Makefile
+++ b/sys/pic32/starter-kit/Makefile
@@ -1,15 +1,16 @@
 PARAM = -DSTARTERKIT
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUARTUSB_ENABLED
+PARAM += -DSPI1_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISB
 PARAM += -DSD0_PORT=1
-PARAM += -DSPI_ENABLED
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
-PARAM += -DUARTUSB_ENABLED
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
 PARAM += -DLED_KERNEL_PIN=2
 PARAM += -DLED_KERNEL_PORT=TRISD
