--- a/sys/pic32/wf32/Makefile
+++ b/sys/pic32/wf32/Makefile
@@ -1,15 +1,16 @@
 PARAM = -DWF32
 PARAM += -DPIC32MX7
-PARAM += -DPWM_ENABLED
-PARAM += -DADC_ENABLED
+PARAM += -DUART1_ENABLED
+PARAM += -DSPI2_ENABLED
+PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DADC_ENABLED
+PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=4
 PARAM += -DSD0_CS_PORT=TRISD
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
-PARAM += -DSPI_ENABLED
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DUART1_ENABLED
 PARAM += -DLED_TTY_PIN=1
 PARAM += -DLED_TTY_PORT=TRISA
 PARAM += -DLED_DISK_PIN=0
