--- a/sys/pic32/baremetal/Config
+++ b/sys/pic32/baremetal/Config
@@ -44,17 +44,17 @@ options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
 controller      spi2                        # SD card
 
 # SD card
-disk            sd0     at spi2 flags 0x41  # select pin RD1
+device          sd0     at spi2 pin RD1     # select pin
 options         "SD0_MHZ=16"                # speed 16 MHz
 options         "SD0_PORT=2"                # at spi2               TODO: delete
-options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=1"              # ...use pin RD1        TODO: use flags
+options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=1"              # ...use pin RD1        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
