--- a/sys/pic32/duinomite-emega/Config
+++ b/sys/pic32/duinomite-emega/Config
@@ -38,7 +38,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -46,18 +46,19 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi3                        # SD card
 
 # microSD card
-disk            sd0     at spi3 flags 0x7c  # select pin RG12
+device          sd0     at spi3
+                        pins RG12, RG13     # select pin, enable pin
 options         "SD0_PORT=3"                # at spi3               TODO: delete
-options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=12"             # ...use pin RG12       TODO: use flags
-options         "SD0_ENA_PORT=TRISG"        # for SD enable...      TODO: use flags
-options         "SD0_ENA_PIN=13"            # ...use pin RG13       TODO: use flags
+options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=12"             # ...use pin RG12       TODO: delete
+options         "SD0_ENA_PORT=TRISG"        # for SD enable...      TODO: delete
+options         "SD0_ENA_PIN=13"            # ...use pin RG13       TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
