--- a/sys/pic32/duinomite/Config
+++ b/sys/pic32/duinomite/Config
@@ -37,7 +37,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb0
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -45,18 +45,19 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi3                        # SD card
 
 # microSD card
-disk            sd0     at spi3 flags 0x45  # select pin RD5
+device          sd0     at spi3
+                        pins RD5, RB13      # select pin, enable pin
 options         "SD0_PORT=3"                # at spi3               TODO: delete
-options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=5"              # ...use pin RD5        TODO: use flags
-options         "SD0_ENA_PORT=TRISB"        # for SD enable...      TODO: use flags
-options         "SD0_ENA_PIN=13"            # ...use pin RB13       TODO: use flags
+options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=5"              # ...use pin RD5        TODO: delete
+options         "SD0_ENA_PORT=TRISB"        # for SD enable...      TODO: delete
+options         "SD0_ENA_PIN=13"            # ...use pin RB13       TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
