--- a/sys/pic32/explorer16/Config
+++ b/sys/pic32/explorer16/Config
@@ -46,17 +46,17 @@ options         "CONSOLE_DEVICE=tty1"       # /dev/tty1
 controller      spi1                        # SD card
 
 # SD card
-disk            sd0     at spi1 flags 0x21  # select pin RB1
+device          sd0     at spi1 pin RB1     # select pin
 options         "SD0_MHZ=10"                # speed 10 MHz
 options         "SD0_PORT=1"                # at spi1               TODO: delete
-options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=1"              # ...use pin RB1        TODO: use flags
+options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=1"              # ...use pin RB1        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
