--- a/sys/pic32/maximite/Config
+++ b/sys/pic32/maximite/Config
@@ -38,7 +38,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -46,16 +46,16 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi4                        # SD card
 
 # microSD card
-disk            sd0     at spi4 flags 0x50  # select pin RE0
+device          sd0     at spi4 pin RE0     # select pin
 options         "SD0_PORT=4"                # at spi3               TODO: delete
-options         "SD0_CS_PORT=TRISE"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=0"              # ...use pin RE0        TODO: use flags
+options         "SD0_CS_PORT=TRISE"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=0"              # ...use pin RE0        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
