--- a/sys/pic32/picadillo/Config
+++ b/sys/pic32/picadillo/Config
@@ -37,20 +37,20 @@ options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
 controller      spi2                        # SD card
 
 # microSD card
-disk            sd0     at spi2 flags 0x79  # select pin RG9
+device          sd0     at spi2 pin RG9     # select pin
 options         "SD0_MHZ=10"                # speed 10 MHz
 options         "SD0_PORT=2"                # at spi2               TODO: delete
-options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=9"              # ...use pin RG9        TODO: use flags
+options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=9"              # ...use pin RG9        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
 
 # HX8357 TFT display driver
-device          hxtft0
+device          hxtft
