--- a/sys/pic32/pinguino-micro/Config
+++ b/sys/pic32/pinguino-micro/Config
@@ -35,7 +35,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -43,16 +43,16 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi2                        # SD card
 
 # microSD card
-disk            sd0     at spi2 flags 0x2d  # select pin RB13
+device          sd0     at spi2 pin RB13    # select pin
 options         "SD0_PORT=2"                # at spi2               TODO: delete
-options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=13"             # ...use pin RB13       TODO: use flags
+options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=13"             # ...use pin RB13       TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
