--- a/sys/pic32/sdxl/Config
+++ b/sys/pic32/sdxl/Config
@@ -36,7 +36,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -44,19 +44,19 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi2                        # SD card
 
 # microSD card
-disk            sd0     at spi2 flags 0x79  # select pin RG9
+device          sd0     at spi2 pin RG9     # select pin RG9
 options         "SD0_PORT=2"                # sd0 at spi2           TODO: delete
-options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=9"              # ...use pin RA9        TODO: use flags
+options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=9"              # ...use pin RA9        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
 
 # GLCD driver
-device          glcd0
+device          glcd
