--- a/sys/pic32/starter-kit/Config
+++ b/sys/pic32/starter-kit/Config
@@ -37,7 +37,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -45,16 +45,16 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi1                        # SD card
 
 # SD card
-disk            sd0     at spi1 flags 0x21  # select pin RB1
+device          sd0     at spi1 pin RB1     # select pin RB1
 options         "SD0_PORT=1"                # at spi1               TODO: delete
-options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=1"              # ...use pin RB1        TODO: use flags
+options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: delete
+options         "SD0_CS_PIN=1"              # ...use pin RB1        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
