--- a/sys/pic32/ubw32/Config
+++ b/sys/pic32/ubw32/Config
@@ -46,7 +46,7 @@ config          unix    root on sd0a
 options         "CONSOLE_DEVICE=ttyUSB0"    # Console on USB
 
 # Virtual UART on USB
-pseudo-device   uartusb
+device          uartusb
 options         "USB_MAX_EP_NUMBER=3"
 options         "USB_NUM_STRING_DESCRIPTORS=3"
 
@@ -54,20 +54,20 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi1                        # SD card
 
 # microSD card
-disk            sd0     at spi1 flags 0x19  # select pin RA9
-disk            sd1     at spi1 flags 0x1a  # select pin RA10
+device          sd0     at spi1 pin RA9     # select pin
+device          sd1     at spi1 pin RA10    # select pin
 options         "SD0_PORT=1"                # sd0 at spi1           TODO: delete
-options         "SD0_CS_PORT=TRISA"         # for sd0 chip select...TODO: use flags
-options         "SD0_CS_PIN=9"              # ...use pin RA9        TODO: use flags
+options         "SD0_CS_PORT=TRISA"         # for sd0 chip select...TODO: delete
+options         "SD0_CS_PIN=9"              # ...use pin RA9        TODO: delete
 options         "SD1_PORT=1"                # sd1 at spi1           TODO: delete
-options         "SD1_CS_PORT=TRISA"         # for sd1 chip select...TODO: use flags
-options         "SD1_CS_PIN=10"             # ...use pin RA9        TODO: use flags
+options         "SD1_CS_PORT=TRISA"         # for sd1 chip select...TODO: delete
+options         "SD1_CS_PIN=10"             # ...use pin RA9        TODO: delete
 
 # General purpose I/O ports
-device          gpio0
+device          gpio
 
 # ADC driver
-device          adc0
+device          adc
 
 # PWM driver
-device          pwm0
+device          pwm
